--- a/game/src/app.css
+++ b/game/src/app.css
@@ -1,8 +1,17 @@
 /* font-family: 'Griffy', cursive;
 font-family: 'Raleway', sans-serif; */
 
+/* In order to repeat this animation I had to make two separate animations and duplicate classes that I can toggle between in react so that it recongizes that the elements are different */
+
 /* The animation code */
-@keyframes example {
+@keyframes first {
+    0%   {color: rgba(0,0,0,1);}
+    25%  {color: rgba(0,0,0,.75);}
+    50%  {color: rgba(0,0,0,.5);}
+    75% {color: rgba(0,0,0,.25);}
+    100% {color: rgba(0,0,0,0);}
+  }
+@keyframes second {
     0%   {color: rgba(0,0,0,1);}
     25%  {color: rgba(0,0,0,.75);}
     50%  {color: rgba(0,0,0,.5);}
@@ -11,23 +20,52 @@ font-family: 'Raleway', sans-serif; */
   }
   
   /* The element to apply the animation to */
-  .ingredient1 {
-    animation-name: example;
-    animation-delay: 2s; 
+  .ingredientfirst1 {
+    animation-name: first;
+    /* animation-delay: 2s;  */
     animation-duration: 4s;
     animation-timing-function: linear;
+    animation-fill-mode: forwards;
   }
 
-  .ingredient2 {
-    animation-name: example;
-    animation-delay: 4s; 
-    animation-duration: 4s;
+  .ingredientfirst2 {
+    animation-name: first;
+    /* animation-delay: 4s;  */
+    animation-duration: 5s;
     animation-timing-function: linear;
+    animation-fill-mode: forwards;
   }
 
-  .ingredient3 {
-    animation-name: example;
-    animation-delay: 6s; 
+  .ingredientfirst3 {
+    animation-name: first;
+    /* animation-delay: 6s;  */
+    animation-duration: 6s;
+    animation-timing-function: linear;
+    animation-fill-mode: forwards;
+  }
+
+/* toggled classes */
+
+  .ingredientsecond1 {
+    animation-name: second;
+    /* animation-delay: 2s;  */
     animation-duration: 4s;
     animation-timing-function: linear;
+    animation-fill-mode: forwards;
+  }
+
+  .ingredientsecond2 {
+    animation-name: second;
+    /* animation-delay: 4s;  */
+    animation-duration: 5s;
+    animation-timing-function: linear;
+    animation-fill-mode: forwards;
+  }
+
+  .ingredientsecond3 {
+    animation-name: second;
+    /* animation-delay: 6s;  */
+    animation-duration: 6s;
+    animation-timing-function: linear;
+    animation-fill-mode: forwards;
   }
