--- a/game/src/app.css
+++ b/game/src/app.css
@@ -1,36 +1,72 @@
 /* font-family: 'Griffy', cursive;
 font-family: 'Raleway', sans-serif; */
 
-/* In order to repeat this animation I had to make two separate animations and duplicate classes that I can toggle between in react so that it recongizes that the elements are different */
+:root {
+--lightGreen: #539c2e;
+--darkGreen: #1d3c0e;
+--lightGray: #252525;	
+--darkGray: #232721;
+}
 
 body {
   font-family: 'Raleway', sans-serif;
+  background-color: var(--lightGray);
+  color: white;
 }
 
 h1, h2, h3, h4, h5, h6 {
   font-family: 'Griffy', cursive;
+  letter-spacing: .2em;
+  color: var(--lightGreen);
+  text-shadow: 2px 2px 2px black;
+  font-weight: normal;
+}
+
+.title {
+  font-size: 4em;
+}
+
+.header {
+  border-bottom: 10px solid black;
+  border-radius: 5px;
+}
+
+.login {
+  border: 5px solid var(--darkGreen);
+  border-radius: 5px;
+  width: 650px;
+  height: 6em;
+  padding: .5em;
+}
+
+.register{
+  border: 5px solid var(--darkGreen);
+  border-radius: 5px;
+  width: 400px;
+  height: 300px;
+  padding: 2em;
 }
 
 /* The animation code */
 @keyframes first {
-    0%   {color: rgba(0,0,0,1);}
-    25%  {color: rgba(0,0,0,.75);}
-    50%  {color: rgba(0,0,0,.5);}
-    75% {color: rgba(0,0,0,.25);}
-    100% {color: rgba(0,0,0,0);}
+    0%   {color: rgba(255,255,255,1);}
+    25%  {color: rgba(255,255,255,.75);}
+    50%  {color: rgba(255,255,255,.5);}
+    75% {color: rgba(255,255,255,.25);}
+    100% {color: rgba(255,255,255,0);}
   }
 @keyframes second {
-    0%   {color: rgba(0,0,0,1);}
-    25%  {color: rgba(0,0,0,.75);}
-    50%  {color: rgba(0,0,0,.5);}
-    75% {color: rgba(0,0,0,.25);}
-    100% {color: rgba(0,0,0,0);}
+    0%   {color: rgba(255,255,255,1);}
+    25%  {color: rgba(255,255,255,.75);}
+    50%  {color: rgba(255,255,255,.5);}
+    75% {color: rgba(255,255,255,.25);}
+    100% {color: rgba(255,255,255,0);}
   }
   
-  /* The element to apply the animation to */
+
+/* In order to repeat this animation I had to make two separate animations and duplicate classes that I can toggle between in react so that it recongizes that the elements are different */
   .ingredientfirst1 {
     animation-name: first;
-    /* animation-delay: 2s;  */
     animation-duration: 4s;
     animation-timing-function: linear;
     animation-fill-mode: forwards;
@@ -38,7 +74,6 @@ h1, h2, h3, h4, h5, h6 {
 
   .ingredientfirst2 {
     animation-name: first;
-    /* animation-delay: 4s;  */
     animation-duration: 5s;
     animation-timing-function: linear;
     animation-fill-mode: forwards;
@@ -46,7 +81,6 @@ h1, h2, h3, h4, h5, h6 {
 
   .ingredientfirst3 {
     animation-name: first;
-    /* animation-delay: 6s;  */
     animation-duration: 6s;
     animation-timing-function: linear;
     animation-fill-mode: forwards;
@@ -54,7 +88,6 @@ h1, h2, h3, h4, h5, h6 {
 
   .ingredientfirst4 {
     animation-name: first;
-    /* animation-delay: 6s;  */
     animation-duration: 7s;
     animation-timing-function: linear;
     animation-fill-mode: forwards;
@@ -62,7 +95,6 @@ h1, h2, h3, h4, h5, h6 {
 
   .ingredientfirst5 {
     animation-name: first;
-    /* animation-delay: 6s;  */
     animation-duration: 7.5s;
     animation-timing-function: linear;
     animation-fill-mode: forwards;
@@ -72,7 +104,6 @@ h1, h2, h3, h4, h5, h6 {
 
   .ingredientsecond1 {
     animation-name: second;
-    /* animation-delay: 2s;  */
     animation-duration: 4s;
     animation-timing-function: linear;
     animation-fill-mode: forwards;
@@ -80,7 +111,6 @@ h1, h2, h3, h4, h5, h6 {
 
   .ingredientsecond2 {
     animation-name: second;
-    /* animation-delay: 4s;  */
     animation-duration: 5s;
     animation-timing-function: linear;
     animation-fill-mode: forwards;
@@ -88,7 +118,6 @@ h1, h2, h3, h4, h5, h6 {
 
   .ingredientsecond3 {
     animation-name: second;
-    /* animation-delay: 6s;  */
     animation-duration: 6s;
     animation-timing-function: linear;
     animation-fill-mode: forwards;
@@ -96,7 +125,6 @@ h1, h2, h3, h4, h5, h6 {
 
   .ingredientsecond4 {
     animation-name: second;
-    /* animation-delay: 6s;  */
     animation-duration: 7s;
     animation-timing-function: linear;
     animation-fill-mode: forwards;
@@ -104,7 +132,6 @@ h1, h2, h3, h4, h5, h6 {
 
   .ingredientsecond5 {
     animation-name: second;
-    /* animation-delay: 6s;  */
     animation-duration: 7.5s;
     animation-timing-function: linear;
     animation-fill-mode: forwards;
